--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fourpan",
-  "version": "1.0.0",
+  "name": "boldgrid-fourpan",
+  "version": "1.1.0",
   "description": "Create a focus overlay",
   "main": "jquery.fourpan.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rramo012/fourpan.git"
+    "url": "git+https://github.com/boldgrid/fourpan.git"
   },
   "keywords": [
     "jquery"
@@ -16,7 +16,7 @@
   "author": "Rafael Ramos",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rramo012/fourpan/issues"
+    "url": "https://github.com/boldgrid/fourpan/issues"
   },
-  "homepage": "https://github.com/rramo012/fourpan#readme"
+  "homepage": "https://github.com/boldgrid/fourpan/fourpan#readme"
 }
