--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boldgrid-fourpan",
+  "name": "fourpan",
   "version": "1.1.0",
   "description": "Create a focus overlay",
   "main": "jquery.fourpan.js",
